Add three classes for Exception Handling. Add type conversion, Substring and Split into String.

--- a/System/System.vcxproj.filters
+++ b/System/System.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="String.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Exception.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
