--- a/System/System.vcxproj
+++ b/System/System.vcxproj
@@ -66,20 +66,20 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>..\bin</OutDir>
-    <IntDir>..\obj</IntDir>
+    <OutDir>..\bin\</OutDir>
+    <IntDir>..\obj\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>..\bin</OutDir>
-    <IntDir>..\obj</IntDir>
+    <OutDir>..\bin\</OutDir>
+    <IntDir>..\obj\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>..\bin</OutDir>
-    <IntDir>..\obj</IntDir>
+    <OutDir>..\bin\</OutDir>
+    <IntDir>..\obj\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>..\bin</OutDir>
-    <IntDir>..\obj</IntDir>
+    <OutDir>..\bin\</OutDir>
+    <IntDir>..\obj\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -130,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="String.h" />
+    <ClInclude Include="Exception.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
