--- a/System/System.vcxproj
+++ b/System/System.vcxproj
@@ -129,6 +129,9 @@
     <ClInclude Include="String.h" />
     <ClInclude Include="Exception.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
