--- a/System/System.vcxproj
+++ b/System/System.vcxproj
@@ -126,6 +126,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BasicType.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="Exception.h" />
   </ItemGroup>
