--- a/System/System.vcxproj.filters
+++ b/System/System.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Exception.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="BasicType.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
