Complete the implement of FileInfo and DirectoryInfo (both inherited from FileSystemInfo) and add some test cases for them.

--- a/System/System.vcxproj.filters
+++ b/System/System.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClInclude Include="BasicType.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DirectoryInfo.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FileSystemInfo.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FileInfo.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
