--- a/System/System.vcxproj
+++ b/System/System.vcxproj
@@ -127,6 +127,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BasicType.h" />
+    <ClInclude Include="DirectoryInfo.h" />
+    <ClInclude Include="FileInfo.h" />
+    <ClInclude Include="FileSystemInfo.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="Exception.h" />
   </ItemGroup>
