--- a/System/System.vcxproj
+++ b/System/System.vcxproj
@@ -132,9 +132,7 @@
     <ClInclude Include="FileSystemInfo.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="Exception.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClInclude Include="System.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
