--- a/System/System.vcxproj.filters
+++ b/System/System.vcxproj.filters
@@ -33,10 +33,8 @@
     <ClInclude Include="FileInfo.h">
       <Filter>头文件</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Main.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
+    <ClInclude Include="System.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
