--- a/System/System.vcxproj.filters
+++ b/System/System.vcxproj.filters
@@ -21,19 +21,16 @@
     <ClInclude Include="Exception.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="BasicType.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="DirectoryInfo.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="FileSystemInfo.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="FileInfo.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="System.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Math.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FileSystem.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Type.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
