Add the implements of HOOSC (has not finished). Add Geometry class and Math class.

--- a/System.Image/System.Image.vcxproj
+++ b/System.Image/System.Image.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="BOV.h" />
     <ClInclude Include="Algorithm.h" />
     <ClInclude Include="EdgeLink.h" />
+    <ClInclude Include="Geometry.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="Filter.h" />
     <ClInclude Include="Morphology.h" />
