Finish the implement of HOOSC. Add normalization into BOV, in order to make BOV insensitive to the total amount of local descriptor in a shape.

--- a/System.Image/System.Image.vcxproj
+++ b/System.Image/System.Image.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ClInclude Include="BOV.h" />
     <ClInclude Include="Algorithm.h" />
+    <ClInclude Include="Contour.h" />
     <ClInclude Include="EdgeLink.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Util.h" />
