--- a/System.Image/System.Image.vcxproj.filters
+++ b/System.Image/System.Image.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Geometry.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Contour.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
