--- a/System/System.vcxproj.filters
+++ b/System/System.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClInclude Include="Util.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Collection.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
