Add support for confusion matrix.

--- a/System.Image/System.Image.vcxproj.filters
+++ b/System.Image/System.Image.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClInclude Include="EdgeMatching.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Eigen.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
