--- a/Experiement/Experiement.vcxproj.filters
+++ b/Experiement/Experiement.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LDPPI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
