--- a/System.ML/System.ML.vcxproj
+++ b/System.ML/System.ML.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="LDA.h" />
     <ClInclude Include="MQDF.h" />
     <ClInclude Include="System.ML.h" />
+    <ClInclude Include="TSNE.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
