Improve t-SNE. Fix some bugs.

--- a/Experiement/Experiement.vcxproj.filters
+++ b/Experiement/Experiement.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="LDPPI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TSNE.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
