--- a/Experiement/Experiement.vcxproj
+++ b/Experiement/Experiement.vcxproj
@@ -158,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LDPPI.h" />
+    <ClInclude Include="TSNE.h" />
     <ClInclude Include="Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
