--- a/System/System.vcxproj
+++ b/System/System.vcxproj
@@ -146,6 +146,9 @@
     <ClInclude Include="System.h" />
     <ClInclude Include="Util.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Math.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
