--- a/Export/Export.vcxproj.filters
+++ b/Export/Export.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NativeMat.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
