--- a/src/System.Image/System.Image.vcxproj.filters
+++ b/src/System.Image/System.Image.vcxproj.filters
@@ -47,7 +47,7 @@
     <ClInclude Include="System.Image.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Util.h">
+    <ClInclude Include="Core.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
