--- a/src/System.ML/System.ML.vcxproj.filters
+++ b/src/System.ML/System.ML.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="Core.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Retrieval.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
