Change some experimental codes.

--- a/src/System.ML/System.ML.vcxproj
+++ b/src/System.ML/System.ML.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Kmeans.cpp" />
     <ClCompile Include="Reduction.cpp" />
   </ItemGroup>
   <ItemGroup>
